Macro/skim/logs/19545446_19.err
input_line_9:2:20: error: expected expression
 FlatMix(19*100000,, $(Process+1)*100000-1,,) /* '.x' tries to invoke a function with the same name as the macro */
                   ^
input_line_9:2:24: error: use of undeclared identifier 'Process'
 FlatMix(19*100000,, $(Process+1)*100000-1,,) /* '.x' tries to invoke a function with the same name as the macro */
                       ^
input_line_9:2:44: error: expected expression
 FlatMix(19*100000,, $(Process+1)*100000-1,,) /* '.x' tries to invoke a function with the same name as the macro */
                                           ^
input_line_9:2:45: error: expected expression
 FlatMix(19*100000,, $(Process+1)*100000-1,,) /* '.x' tries to invoke a function with the same name as the macro */
                                            ^
